--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,3 +1,3 @@
 {
-  "exclude": ["tailwind.config.js", "postcss.config.js"]
+  "exclude": ["tailwind.config.js", "postcss.config.js", "vite.config.ts", "vitest.config.ts"]
 }
