--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "odata-filter-parser": "^0.5.2",
     "pinia": "^2.1.7",
     "pinia-generic": "^0.1.4",
+    "sweetalert2": "^11.9.0",
     "vue": "^3.3.7",
     "vue-property-decorator": "^8.0.0",
     "vue-router": "^4.2.5"
