Full Crud on Stamp Collections
* Added full CRUD support for stamp collections
* added headlessui for support of pull out panels and a few other tidbits
* defined some common styles to use with tailwind for repeated things like buttons, form headers etc

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,11 +1,12 @@
 {
   "extends": "@vue/tsconfig/tsconfig.dom.json",
   "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "src/models/*.ts", "vueform.config.ts"],
-  "exclude": ["src/**/__tests__/*"],
+  "exclude": ["src/**/__tests__/*", "src/**/*.spec.ts"],
   "compilerOptions": {
     "composite": true,
     "isolatedModules ": true,
     "verbatimModuleSyntax": true,
+    "experimentalDecorators": true,
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
