--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "ag-grid-community": "^30.2.1",
     "ag-grid-vue3": "^30.2.1",
     "axios": "^1.6.0",
+    "datatables.net-fixedheader": "^3.4.0",
+    "datatables.net-scroller": "^2.3.0",
+    "datatables.net-select": "^1.7.0",
+    "datatables.net-vue3": "^2.1.3",
     "lodash": "^4.17.21",
     "odata-filter-parser": "^0.5.2",
     "pinia": "^2.1.7",
@@ -34,6 +38,7 @@
     "@playwright/test": "^1.39.0",
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
+    "@types/jquery": "^3.5.27",
     "@types/jsdom": "^21.1.3",
     "@types/lodash": "^4.14.201",
     "@types/node": "^18.18.5",
