--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.16",
     "@heroicons/vue": "^2.0.18",
-    "@vueform/vueform": "^1.5.6",
+    "@vueform/vueform": "^1.5.7",
     "ag-grid-community": "^30.2.1",
     "ag-grid-vue3": "^30.2.1",
     "axios": "^1.6.0",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "odata-filter-parser": "^0.5.2",
     "pinia": "^2.1.7",
     "pinia-generic": "^0.1.4",
@@ -35,7 +35,7 @@
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
     "@types/jsdom": "^21.1.3",
-    "@types/lodash": "^4.14.201",
+    "@types/lodash-es": "^4.17.11",
     "@types/node": "^18.18.5",
     "@vitejs/plugin-basic-ssl": "^1.0.1",
     "@vitejs/plugin-vue": "^4.4.0",
