--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,5 +4,7 @@
   "tabWidth": 2,
   "singleQuote": true,
   "printWidth": 90,
-  "trailingComma": "none"
+  "trailingComma": "none",
+  "vueIndentScriptAndStyle": true,
+  "endOfLine": "crlf"
 }
