--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.16",
     "@heroicons/vue": "^2.0.18",
-    "@vueform/vueform": "^1.5.7",
+    "@vueform/vueform": "^1.5.8",
     "ag-grid-community": "^30.2.1",
     "ag-grid-vue3": "^30.2.1",
     "axios": "^1.6.0",
@@ -52,6 +52,7 @@
     "npm-run-all2": "^6.1.1",
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
+    "resize-observer-polyfill": "^1.5.1",
     "sass": "^1.69.5",
     "tailwindcss": "^3.3.5",
     "typescript": "~5.2.0",
