--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "ag-grid-community": "^30.2.1",
     "ag-grid-vue3": "^30.2.1",
     "axios": "^1.6.0",
+    "floating-vue": "^2.0.0-beta.24",
     "lodash-es": "^4.17.21",
-    "odata-filter-parser": "^0.5.2",
+    "odata-filter-parser": "^0.5.4",
     "pinia": "^2.1.7",
     "pinia-generic": "^0.1.4",
     "sweetalert2": "^11.9.0",
