--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,7 +1,7 @@
 {
   "extends": "@vue/tsconfig/tsconfig.dom.json",
   "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "src/models/*.ts", "vueform.config.ts"],
-  "exclude": ["src/**/__tests__/*", "src/**/*.spec.ts", "src/vitest-setup.ts"],
+  "exclude": ["src/**/__tests__/*", "src/**/*.spec.ts", "src/vitest-setup.ts", "src/@custom_types/*"],
   "compilerOptions": {
     "composite": true,
     "isolatedModules ": true,
@@ -9,7 +9,8 @@
     "experimentalDecorators": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
-    }
+      "@/*": ["./src/*"],
+      "*": ["./src/@custom_types/*"]
+    },
   }
 }
