Add new stamp view
Fixes #13

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -6,5 +6,6 @@
   "printWidth": 90,
   "trailingComma": "none",
   "vueIndentScriptAndStyle": true,
+  "embeddedLanguageFormatting": "auto",
   "endOfLine": "auto"
 }
