--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ag-grid-community": "^30.2.1",
     "ag-grid-vue3": "^30.2.1",
     "axios": "^1.6.0",
+    "blueimp-load-image": "^5.16.0",
     "floating-vue": "^2.0.0-beta.24",
     "lodash-es": "^4.17.21",
     "odata-filter-parser": "^0.5.4",
@@ -34,9 +35,10 @@
     "@playwright/test": "^1.39.0",
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
+    "@types/blueimp-load-image": "^5.16.6",
     "@types/jsdom": "^21.1.3",
     "@types/lodash-es": "^4.17.11",
-    "@types/node": "^18.18.5",
+    "@types/node": "^18.19.2",
     "@vitejs/plugin-basic-ssl": "^1.0.1",
     "@vitejs/plugin-vue": "^4.4.0",
     "@vitest/coverage-v8": "^0.34.6",
