--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "eslint-plugin-you-dont-need-lodash-underscore": "^6.13.0",
+    "intersection-observer": "^0.12.2",
     "jsdom": "^22.1.0",
     "npm-run-all2": "^6.1.1",
     "postcss": "^8.4.31",
