--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "ag-grid-vue3": "^30.2.1",
     "axios": "^1.6.0",
     "blueimp-load-image": "^5.16.0",
-    "floating-vue": "^2.0.0-beta.24",
+    "floating-vue": "^5.2.2",
     "lodash-es": "^4.17.21",
     "odata-filter-parser": "^0.5.4",
     "pinia": "^2.1.7",
