--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,6 +1,6 @@
 {
   "extends": "@vue/tsconfig/tsconfig.dom.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "src/models/*.ts", "vueform.config.ts"],
+  "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "src/models/*.ts", "vueform.config.ts", "src/locales/*.json"],
   "exclude": ["src/**/__tests__/*", "src/vitest-setup.ts", "src/@custom_types/*"],
   "compilerOptions": {
     "composite": true,
