--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@pinia/testing": "^0.1.3",
     "@playwright/test": "^1.39.0",
+    "@rollup/plugin-replace": "^5.0.5",
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
     "@types/blueimp-load-image": "^5.16.6",
