--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "vue-property-decorator": "^8.0.0",
     "vue-router": "^4.2.5",
     "vue-toast-notification": "^3.1.2",
-    "vue3-eventbus": "^2.0.0"
+    "vue3-eventbus": "^2.0.0",
+    "vuejs3-logger": "1.0.0"
   },
   "devDependencies": {
     "@pinia/testing": "^0.1.3",
