--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ag-grid-vue3": "^30.2.1",
     "axios": "^1.6.0",
     "blueimp-load-image": "^5.16.0",
+    "dayjs": "^1.11.11",
     "floating-vue": "^5.2.2",
     "lodash-es": "^4.17.21",
     "odata-filter-parser": "^0.5.5",
