--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.19",
-    "@vueform/vueform": "^1.9.10",
+    "@vueform/vueform": "1.9.12",
     "ag-grid-community": "^30.2.1",
     "ag-grid-vue3": "^30.2.1",
     "axios": "^1.6.0",
