--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.19",
     "@vueform/vueform": "1.9.12",
-    "ag-grid-community": "^30.2.1",
-    "ag-grid-vue3": "^30.2.1",
+    "ag-grid-community": "^32.1.0",
+    "ag-grid-vue3": "32.1.0",
     "axios": "^1.6.0",
     "blueimp-load-image": "^5.16.0",
     "dayjs": "^1.11.11",
@@ -68,6 +68,6 @@
     "typescript": "~5.2.0",
     "vite": "^5.0.4",
     "vitest": "^0.34.6",
-    "vue-tsc": "^1.8.19"
+    "vue-tsc": "^2.1.6"
   }
 }
