--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.19",
-    "@vueform/vueform": "1.9.12",
+    "@vueform/vueform": "^1.10.4",
     "ag-grid-community": "^32.1.0",
     "ag-grid-vue3": "32.1.0",
     "axios": "^1.6.0",
