--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "floating-vue": "^5.2.2",
     "lodash-es": "^4.17.21",
     "odata-filter-parser": "^0.5.5",
+    "pdfmake": "^0.2.18",
     "pinia": "^2.1.7",
     "pinia-generic": "^0.2.0",
     "sweetalert2": "^11.10.7",
@@ -45,6 +46,7 @@
     "@types/jsdom": "^21.1.3",
     "@types/lodash-es": "^4.17.11",
     "@types/node": "^18.19.2",
+    "@types/pdfmake": "^0.2.10",
     "@vitejs/plugin-basic-ssl": "^1.0.1",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitest/coverage-v8": "^0.34.6",
