--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "pdfmake": "^0.2.18",
     "pinia": "^2.1.7",
     "pinia-generic": "^0.2.0",
-    "sweetalert2": "^11.10.7",
+    "sweetalert2": "^11.22.0",
     "vue": "^3.5.1",
     "vue-i18n": "^9.11.0",
     "vue-property-decorator": "^8.0.0",
@@ -47,9 +47,9 @@
     "@types/lodash-es": "^4.17.11",
     "@types/node": "^18.19.2",
     "@types/pdfmake": "^0.2.10",
-    "@vitejs/plugin-basic-ssl": "^1.0.1",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "@vitest/coverage-v8": "^0.34.6",
+    "@vitejs/plugin-basic-ssl": "2.0.0",
+    "@vitejs/plugin-vue": "^5.2.4",
+    "@vitest/coverage-v8": "^3.2.1",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^2.4.1",
@@ -67,8 +67,8 @@
     "sass": "^1.69.5",
     "tailwindcss": "^3.3.5",
     "typescript": "~5.2.0",
-    "vite": "^5.0.4",
-    "vitest": "^0.34.6",
+    "vite": "^6.3.5",
+    "vitest": "^3.2.1",
     "vue-tsc": "^2.1.6"
   }
 }
