--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "stamp-web-vuejs",
-  "version": "7.0.0",
+  "version": "7.1.0",
   "private": true,
   "type": "module",
   "scripts": {
@@ -11,7 +11,7 @@
     "test:e2e": "playwright test",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
     "format": "prettier --write src/"
   },
   "dependencies": {
@@ -25,50 +25,53 @@
     "lodash-es": "^4.17.21",
     "odata-filter-parser": "^0.5.5",
     "pdfmake": "^0.2.18",
-    "pinia": "^2.1.7",
-    "pinia-generic": "^0.2.0",
+    "pinia": "^3.0.3",
+    "pinia-generic": "^0.2.3",
     "sweetalert2": "^11.22.0",
-    "vue": "^3.5.1",
+    "vue": "^3.5.17",
     "vue-i18n": "^9.11.0",
     "vue-property-decorator": "^8.0.0",
-    "vue-router": "^4.2.5",
+    "vue-router": "^4.5.1",
     "vue-toast-notification": "^3.1.2",
     "vue3-eventbus": "^2.0.0",
     "vuejs3-logger": "1.0.0"
   },
   "devDependencies": {
-    "@pinia/testing": "^0.1.3",
-    "@playwright/test": "^1.39.0",
-    "@rollup/plugin-replace": "^5.0.5",
+    "@pinia/testing": "^1.0.2",
+    "@playwright/test": "^1.53.1",
     "@rushstack/eslint-patch": "^1.3.3",
-    "@tsconfig/node18": "^18.2.2",
+    "@tsconfig/node22": "^22.0.2",
     "@types/blueimp-load-image": "^5.16.6",
-    "@types/jsdom": "^21.1.3",
+    "@types/jsdom": "^21.1.7",
     "@types/lodash-es": "^4.17.11",
-    "@types/node": "^18.19.2",
+    "@types/node": "^22.15.32",
     "@types/pdfmake": "^0.2.10",
-    "@vitejs/plugin-basic-ssl": "2.0.0",
-    "@vitejs/plugin-vue": "^5.2.4",
+    "@vitejs/plugin-basic-ssl": "2.1.0",
+    "@vitejs/plugin-vue": "^6.0.0",
     "@vitest/coverage-v8": "^3.2.1",
-    "@vue/eslint-config-prettier": "^8.0.0",
-    "@vue/eslint-config-typescript": "^12.0.0",
-    "@vue/test-utils": "^2.4.1",
-    "@vue/tsconfig": "^0.4.0",
+    "@vitest/eslint-plugin": "^1.2.7",
+    "@vue/eslint-config-prettier": "^10.2.0",
+    "@vue/eslint-config-typescript": "^14.5.1",
+    "@vue/test-utils": "^2.4.6",
+    "@vue/tsconfig": "^0.7.0",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.49.0",
-    "eslint-plugin-vue": "^9.17.0",
+    "eslint": "^9.29.0",
+    "eslint-plugin-playwright": "^2.2.0",
+    "eslint-plugin-vue": "~10.2.0",
     "eslint-plugin-you-dont-need-lodash-underscore": "^6.13.0",
     "intersection-observer": "^0.12.2",
-    "jsdom": "^24.0.0",
-    "npm-run-all2": "^6.1.1",
+    "jiti": "^2.4.2",
+    "jsdom": "^26.1.0",
+    "npm-run-all2": "^8.0.4",
     "postcss": "^8.4.31",
-    "prettier": "^3.0.3",
+    "prettier": "3.5.3",
     "resize-observer-polyfill": "^1.5.1",
     "sass": "^1.69.5",
     "tailwindcss": "^3.3.5",
-    "typescript": "~5.2.0",
-    "vite": "^6.3.5",
-    "vitest": "^3.2.1",
-    "vue-tsc": "^2.1.6"
+    "typescript": "~5.8.0",
+    "vite": "npm:rolldown-vite@latest",
+    "vite-plugin-vue-devtools": "^7.7.7",
+    "vitest": "^3.2.4",
+    "vue-tsc": "^2.2.10"
   }
 }
