--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,16 +1,13 @@
 {
   "extends": "@vue/tsconfig/tsconfig.dom.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "src/**/*.ts", "vueform.config.ts", "src/locales/*.json"],
-  "exclude": ["src/**/__tests__/*", "src/vitest-setup.ts", "src/@custom_types/*"],
+  "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "node_modules/vue/dist/vue.d.ts"],
+  "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
-    "composite": true,
-    "isolatedModules": true,
-    "verbatimModuleSyntax": true,
+    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "experimentalDecorators": true,
-    "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
       "*": ["./src/@custom_types/*"]
-    },
+    }
   }
 }
