--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,14 +1,16 @@
 {
-  "extends": "@tsconfig/node18/tsconfig.json",
+  "extends": "@tsconfig/node22/tsconfig.json",
   "include": [
     "vite.config.*",
     "vitest.config.*",
     "cypress.config.*",
     "nightwatch.conf.*",
-    "playwright.config.*"
+    "playwright.config.*",
+    "eslint.config.*"
   ],
   "compilerOptions": {
-    "composite": true,
+    "noEmit": true,
+    "noImplicitAny": true,
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "types": ["node"]
