--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -1,12 +1,10 @@
 {
   "extends": "./tsconfig.app.json",
+  "include": ["src/**/__tests__/*", "env.d.ts"],
   "exclude": [],
   "compilerOptions": {
-    "composite": true,
+    "composite": false,
     "lib": [],
-    "types": ["node", "jsdom"],
-    "paths": {
-      "@/*": ["./src/*"]
-    }
+    "types": ["node", "jsdom"]
   }
 }
