--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "vuejs3-logger": "1.0.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.1.2",
     "@pinia/testing": "^0.1.3",
     "@playwright/test": "^1.39.0",
     "@rollup/plugin-replace": "^5.0.5",
