--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test:e2e": "playwright test",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "lint": "eslint . --fix",
+    "lint-error": "eslint . --quiet",
     "format": "prettier --write src/"
   },
   "dependencies": {
@@ -22,6 +23,7 @@
     "blueimp-load-image": "^5.16.0",
     "dayjs": "^1.11.13",
     "floating-vue": "^5.2.2",
+    "jiti": "^2.4.2",
     "lodash-es": "^4.17.21",
     "odata-filter-parser": "^0.5.5",
     "pdfmake": "^0.2.20",
@@ -37,6 +39,8 @@
     "vuejs3-logger": "1.0.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.31.0",
     "@pinia/testing": "^0.1.3",
     "@playwright/test": "^1.39.0",
     "@rollup/plugin-replace": "^5.0.5",
@@ -50,13 +54,15 @@
     "@vitejs/plugin-basic-ssl": "2.0.0",
     "@vitejs/plugin-vue": "^5.2.4",
     "@vitest/coverage-v8": "^3.2.1",
-    "@vue/eslint-config-prettier": "^8.0.0",
-    "@vue/eslint-config-typescript": "^12.0.0",
+    "@vitest/eslint-plugin": "^1.2.7",
+    "@vue/eslint-config-prettier": "^10.2.0",
+    "@vue/eslint-config-typescript": "^14.5.1",
     "@vue/test-utils": "^2.4.1",
     "@vue/tsconfig": "^0.4.0",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.49.0",
-    "eslint-plugin-vue": "^9.17.0",
+    "eslint": "^9.19.0",
+    "eslint-plugin-playwright": "^2.2.0",
+    "eslint-plugin-vue": "^10.3.0",
     "eslint-plugin-you-dont-need-lodash-underscore": "^6.13.0",
     "jsdom": "^24.0.0",
     "npm-run-all2": "^6.1.1",
