--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
+    "build-only": "vite build",
+    "coverage": "vitest --coverage",
+    "dev": "vite",
+    "format": "prettier --write src/",
+    "lint": "eslint . --fix",
+    "lint-error": "eslint . --quiet",
     "preview": "vite preview",
     "test:unit": "vitest",
     "test:e2e": "playwright test",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
-    "lint": "eslint . --fix",
-    "lint-error": "eslint . --quiet",
-    "format": "prettier --write src/"
+    "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false"
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
